# J-Studio

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/mockups/: j-studio.html  test_j_studio_mockup.py
jacobian-lens/: .gitignore  README.md  pyproject.toml
jacobian-lens/jlens/: __init__.py  autotune.py  baking.py  benchmark.py  concepts.py  evaluation.py  fitting.py  geometry.py  hooks.py  intervention.py  interventions.py  jspace.py  lens.py  operator.py  progressive.py  protocol.py  trace.py  vis.py
jacobian-lens/scripts/: benchmark_interventions.py  benchmark_readout.py  fit_decoder_lens.py
jacobian-lens/tests/: test_adaptive_operator.py  test_autotune.py  test_baking.py  test_benchmark.py  test_concepts.py  test_evaluation.py  test_fit_cli.py  test_fitting.py  test_geometry.py  test_intervention_hooks.py  test_interventions.py  test_lens_geometry_io.py  test_progressive.py  test_vis_modes.py
jstudio/: __init__.py  __main__.py  domain.py  project.py
jstudio/rules/: __init__.py  protocol.py  sandbox.py  validation.py  worker.py
jstudio/services/: __init__.py  fake.py  hf_cache.py  hf_runtime.py  jlens_adapter.py  lens_fitting.py  protocols.py  slice_runtime.py
jstudio/ui/: __init__.py  accessibility.py  app.py  chat.py  main_workspace.py  models.py  secondary.py  settings.py  startup.py  theme.py
tests/: test_app_arguments.py  test_domain.py  test_fake_services.py  test_hf_cache.py  test_hf_runtime.py  test_jlens_adapter.py  test_lens_fitting.py  test_package.py  test_project.py  test_slice_runtime.py
tests/rules/: test_sandbox.py  (+1 more)
(+79 files in other folders)
