[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "j-studio"
version = "0.1.0"
description = "Desktop workbench for inspecting and intervening in language-model J-space"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "heterodoxin" }]
dependencies = [
    "PySide6>=6.8",
    "quickjs>=1.19.4",
]

[project.urls]
Repository = "https://github.com/heterodoxin/J-Studio"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-qt>=4.4", "ruff>=0.11"]

[project.scripts]
j-studio = "jstudio.ui.app:main"

[tool.setuptools.packages.find]
include = ["jstudio*"]

[tool.setuptools.package-data]
jstudio = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"

[tool.ruff]
line-length = 92
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"jstudio/rules/worker.py" = ["E501"] # Embedded JavaScript is kept readable as JS.
